--- a/latex/memoria.tex
+++ b/latex/memoria.tex
@@ -94,8 +94,10 @@
 	\pagenumbering{arabic}
 
 %------------------------------------------------------------------------------------------
-	\section{Breve intorducción explicando los contenidos}
-	\section{Descripción de los modelos, argumentando las decisiones tomadas}
+	\section{Intorducción}
+	En este documento se explican los modelos de los ejercicios de programación lineal y dinamica, en los de lineal explicando que representa cada conjunto, variable, y restriccion y tambien se hace un pequeño analisis de la magnitud de la complejudad del modelo. A continuación se analizan los resultados de los modelos y se procede a la conclusion.
+
+	\section{Descripción de los modelos}
 		\subsection{Modelo para la compra}
 			En esta parte se pide minimizar el coste de la compra de unos elementos entre 2 fábricas en función de sus limites de inventario donde el precio del elemento y del transporte desde la fábrica hasta donde se quieren tener varia en función de la fábrica.
 			\subsubsection{Conjuntos}
@@ -275,6 +277,7 @@
 			\end{equation}
 			\subsubsection{Analisis del Modelo}
 			Teniendo en cuenta los datos y conjuntos, el problema esta modelizado con 72 variables binarias, es decir, que hay $2^{72}$ posibles valores que pueden tomar nuestro resultado, y con 96 restricciones (sin tener en cuenta las que limitan a que las variables sean binarias).
+		\subsection{Programacion Dinamica}
 	\section{Analisis de los resultados}
 	\section{Conclusiones acerca de la práctica}
 	\newpage
