--- a/latex/memoria.tex
+++ b/latex/memoria.tex
@@ -95,7 +95,7 @@
 
 %------------------------------------------------------------------------------------------
 	\section{Intorducción}
-	En este documento se explican los modelos de los ejercicios de programación lineal y dinamica, en los de lineal explicando que representa cada conjunto, variable, y restriccion y tambien se hace un pequeño analisis de la magnitud de la complejudad del modelo. A continuación se analizan los resultados de los modelos y se procede a la conclusion.
+	En este documento se explican los modelos de los ejercicios de programación lineal y dinamica, en los de lineal explicando que representa cada conjunto, variable, y restriccion. A continuación se analizan los resultados de los modelos, su complejudad y las ventajas y desventajas de usar calc repecto a math prog y finalmente se procede a la conclusion de la práctica.
 
 	\section{Descripción de los modelos}
 		\subsection{Modelo para la compra}
@@ -276,8 +276,12 @@
 			
 		\subsection{Programacion Dinamica}
 	\section{Analisis de los resultados}
-	Teniendo en cuenta los datos y conjuntos, el problema esta modelizado con 5 variables y 13 restricciones (sin tener en cuenta las restricciones para que las variables sean numeros enteros no negativos). Las ultimas 10 restricciones estan hechas para juntar el limite de stock y el maximo de elementos que se pueden comprar y que de esta forma el modelo permita incluir otro tipo de productos para comprar y otras restricciones de forma más fácil, para este caso en concreto se podria modelizar con solo 6 restricciones (como esta puesto en el archivo de calc).\\
-	Teniendo en cuenta los datos y conjuntos, el problema esta modelizado con 72 variables binarias, es decir, que hay $2^{72}$ posibles valores que pueden tomar nuestro resultado, y con 96 restricciones (sin tener en cuenta las que limitan a que las variables sean binarias).
+		\subsection{Describir la solucion y analizar que restricciones limitan el problema}
+		\subsection{Analisis de complejidad}
+		\subsection{Cuestiones}
+		\subsection{Ventajas y desventajas de calc}
+		Teniendo en cuenta los datos y conjuntos, el problema esta modelizado con 5 variables y 13 restricciones (sin tener en cuenta las restricciones para que las variables sean numeros enteros no negativos). Las ultimas 10 restricciones estan hechas para juntar el limite de stock y el maximo de elementos que se pueden comprar y que de esta forma el modelo permita incluir otro tipo de productos para comprar y otras restricciones de forma más fácil, para este caso en concreto se podria modelizar con solo 6 restricciones (como esta puesto en el archivo de calc).\\
+		Teniendo en cuenta los datos y conjuntos, el problema esta modelizado con 72 variables binarias, es decir, que hay $2^{72}$ posibles valores que pueden tomar nuestro resultado, y con 96 restricciones (sin tener en cuenta las que limitan a que las variables sean binarias).
 	\section{Conclusiones acerca de la práctica}
 	\newpage
 %------------------------------------------------------------------------------------------
